AXIS2C-834: In guththila_xml_writer.c, handle the situation of the default namespace, where there is no prefix, so the search of the namespace stack by prefix fails, and there is no prefix to prepend. In guththila_xml_writer_wrapper.c, invoke write_default_namespace when no prefix Add svn:eol-style native to both to remove/add CR characters from Windows